feat: Implement party name and adjective classes for random party generation