@@ -33,11 +33,13 @@ import java.util.List;
 
 /**
  * Calculates the threat level of a character based on combat capabilities,
- * equipment, and abilities. Adapted from Fading Suns 3E to work with 4E character model.
+ * equipment, and abilities. Adapted from Fading Suns 3E to work with 4E
+ * character model.
  */
-public class ThreatLevel {
+public final class ThreatLevel {
 	private static final int DAMAGE_THREAT_MULTIPLICATOR = 2;
 	private static final int WEAPON_THREAT_MULTIPLICATOR = 3;
+	private static final int MELEE_THREAT_MULTIPLICATOR = 3;
 	private static final int CYBERNETICSCOMBAT_THREAT_MULTIPLICATOR = 2;
 	private static final int CYBERNETICS_ENHANCEMENT_THREAT_MULTIPLICATOR = 1;
 	private static final int RESISTANCE_THREAT_MULTIPLICATOR = 2;
@@ -49,10 +51,14 @@ public class ThreatLevel {
 	private static int resistanceThreatLevel = 0;
 	private static float totalThreatLevel = 0;
 
+	private ThreatLevel() {
+	}
+
 	/**
 	 * Calculates the overall threat level of a character.
 	 *
-	 * @param characterPlayer the character to evaluate
+	 * @param characterPlayer
+	 *            the character to evaluate
 	 * @return the threat level value
 	 */
 	public static int getThreatLevel(CharacterPlayer characterPlayer) {
@@ -74,7 +80,8 @@ public class ThreatLevel {
 	/**
 	 * Calculates threat from combat-related skills (fight, melee, shoot).
 	 *
-	 * @param characterPlayer the character to evaluate
+	 * @param characterPlayer
+	 *            the character to evaluate
 	 * @return combat skill threat level
 	 */
 	private static int getCombatThreatLevel(CharacterPlayer characterPlayer) {
@@ -93,7 +100,7 @@ public class ThreatLevel {
 			// Melee skill (armed combat)
 			try {
 				final int meleeRanks = characterPlayer.getSkillValue("melee");
-				threatLevel += meleeRanks * 3;
+				threatLevel += meleeRanks * MELEE_THREAT_MULTIPLICATOR;
 				threatLevel += characterPlayer.getCharacteristicValue(CharacteristicName.STRENGTH) / 2;
 			} catch (final Exception e) {
 				// Skill or characteristic not found
@@ -119,7 +126,8 @@ public class ThreatLevel {
 	/**
 	 * Calculates threat from weapons carried by the character.
 	 *
-	 * @param characterPlayer the character to evaluate
+	 * @param characterPlayer
+	 *            the character to evaluate
 	 * @return weapon threat level
 	 */
 	private static int getWeaponThreatLevel(CharacterPlayer characterPlayer) {
@@ -148,20 +156,21 @@ public class ThreatLevel {
 	/**
 	 * Calculates threat from a single weapon.
 	 *
-	 * @param weapon the weapon to evaluate
+	 * @param weapon
+	 *            the weapon to evaluate
 	 * @return weapon threat level
 	 */
 	private static int getThreatLevel(Weapon weapon) {
 		try {
 			if (weapon == null || weapon.getWeaponDamages().isEmpty()) {
-				return WEAPON_THREAT_MULTIPLICATOR;
+				return 1;
 			}
 
 			int threatLevel = WEAPON_THREAT_MULTIPLICATOR;
 
 			// Threat from damage
 			try {
-				final int mainDamage = weapon.getWeaponDamages().get(0).getMainDamage();
+				final int mainDamage = weapon.getWeaponDamages().getFirst().getMainDamage();
 				threatLevel += mainDamage * DAMAGE_THREAT_MULTIPLICATOR;
 			} catch (final Exception e) {
 				// Weapon damage not available
@@ -186,7 +195,8 @@ public class ThreatLevel {
 	/**
 	 * Calculates threat from cybernetic devices.
 	 *
-	 * @param characterPlayer the character to evaluate
+	 * @param characterPlayer
+	 *            the character to evaluate
 	 * @return cybernetics threat level
 	 */
 	private static int getCyberneticsThreatLevel(CharacterPlayer characterPlayer) {
@@ -197,9 +207,12 @@ public class ThreatLevel {
 			for (final Cyberdevice cyberdevice : cyberdevices) {
 				// Deduce if combat-related from name or description
 				final String id = cyberdevice.getId() != null ? cyberdevice.getId().toLowerCase() : "";
-				final String name = cyberdevice.getName() != null ? cyberdevice.getName().getTranslatedText().toLowerCase() : "";
-				final String description = cyberdevice.getDescription() != null ?
-					cyberdevice.getDescription().getTranslatedText().toLowerCase() : "";
+				final String name = cyberdevice.getName() != null
+						? cyberdevice.getName().getTranslatedText().toLowerCase()
+						: "";
+				final String description = cyberdevice.getDescription() != null
+						? cyberdevice.getDescription().getTranslatedText().toLowerCase()
+						: "";
 
 				final boolean isCombat = isCombatRelated(id, name, description);
 
@@ -219,22 +232,23 @@ public class ThreatLevel {
 	}
 
 	/**
-	 * Detects if a cyberdevice is combat-related by examining its id, name, and description.
+	 * Detects if a cyberdevice is combat-related by examining its id, name, and
+	 * description.
 	 *
-	 * @param id the device ID
-	 * @param name the device name
-	 * @param description the device description
+	 * @param id
+	 *            the device ID
+	 * @param name
+	 *            the device name
+	 * @param description
+	 *            the device description
 	 * @return true if combat-related
 	 */
 	private static boolean isCombatRelated(String id, String name, String description) {
 		final String fullText = id + " " + name + " " + description;
 
-		final String[] combatKeywords = {
-			"combat", "fight", "attack", "weapon", "armor", "shield",
-			"weapon system", "targeting", "sniper", "cannon", "gun",
-			"blade", "sword", "enhanced strength", "enhanced durability",
-			"reflex", "dodge", "defensive", "plasma", "laser", "explosive"
-		};
+		final String[] combatKeywords = {"combat", "fight", "attack", "weapon", "armor", "shield", "weapon system",
+				"targeting", "sniper", "cannon", "gun", "blade", "sword", "enhanced strength", "enhanced durability",
+				"reflex", "dodge", "defensive", "plasma", "laser", "explosive"};
 
 		for (final String keyword : combatKeywords) {
 			if (fullText.contains(keyword)) {
@@ -248,7 +262,8 @@ public class ThreatLevel {
 	/**
 	 * Calculates threat from character vitality (resistances and health).
 	 *
-	 * @param characterPlayer the character to evaluate
+	 * @param characterPlayer
+	 *            the character to evaluate
 	 * @return vitality threat level
 	 */
 	private static int getVitalityThreatLevel(CharacterPlayer characterPlayer) {
@@ -276,12 +291,12 @@ public class ThreatLevel {
 	 */
 	public static void showStatistics() {
 		if (total > 0) {
-			System.out.println("######################################");
-			System.out.println("Total threat: " + totalThreatLevel / total + " (" + total + ")");
-			System.out.println("Combat threat: " + combatThreatLevel / total);
-			System.out.println("Weapon threat: " + weaponThreatLevel / total);
-			System.out.println("Cybernetics threat: " + cyberneticsThreatLevel / total);
-			System.out.println("Resistance threat: " + resistanceThreatLevel / total);
+			MachineLog.info(ThreatLevel.class, "######################################");
+			MachineLog.info(ThreatLevel.class, "Total threat: {} ({})", totalThreatLevel / total, total);
+			MachineLog.info(ThreatLevel.class, "Combat threat: {}", combatThreatLevel / total);
+			MachineLog.info(ThreatLevel.class, "Weapon threat: {}", weaponThreatLevel / total);
+			MachineLog.info(ThreatLevel.class, "Cybernetics threat: {}", cyberneticsThreatLevel / total);
+			MachineLog.info(ThreatLevel.class, "Resistance threat: {}", resistanceThreatLevel / total);
 		}
 	}
 
